# schematalog-webapp

./: .gitignore  justfile  main.py  plan.md  pyproject.toml  rxconfig.py
app/: app.py
app/components/: header.py  layout.py  schema_table.py  sidebar.py  theme_toggle.py
app/pages/: dashboard.py  publish.py  schema_list.py
app/states/: publish_state.py  schema_state.py  theme_state.py
